# asciiator-gui

./: LICENSE  README.md  pyproject.toml
.github/workflows/: asciiator-gui.yml  python-app.yml
src/: main.py
src/assets/stylesheets/: main.qss
src/widgets/: hello_world_widget.py  input_table.py  main_window_widget.py
src/widgets/buttons/: base_button_widget.py  select_file_button.py  transform_file_button.py
src/widgets/custom_styles/: checkbox_style.py
src/widgets/util/: file.py
